tests/snapshots/parser__decode_osm_pbf_files@libosmium__t_io_data-gen.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/t_io_data-gen.osm.pbf
---
[
    Skip,
]
