tests/snapshots/parser__decode_osm_pbf_files@libosmium__t_io_data-n5w1r0-gen.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/t_io_data-n5w1r0-gen.osm.pbf
---
[
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Create {
        elem: Way,
        id: 20,
        ts: 1388534400000,
        val: indoc! {r#"
            osmt:highway "primary";
            osmm:type "w";
            osmm:version "1"^^xsd:integer;
            osmm:user "test";
            osmm:timestamp "2014-01-01 00:00:00 UTC"^^xsd:dateTime;
            osmm:changeset "1"^^xsd:integer.
            osmm:isClosed "false"^^xsd:boolean;
            osmm:loc "Point(0.9999999827705324 1.0999999852385371)"^^geo:wktLiteral;
        "}#",
    },
]
