tests/snapshots/parser__decode_osm_pbf_files@libosmium__t_io_data_pbf_version-1-densenodes.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/t_io_data_pbf_version-1-densenodes.osm.pbf
---
[
    Skip,
]
